# School-Portfolio

./: .gitignore  README.md
cs-360/: README.MD
cs-360/ec/: extra.c
cs-360/final/: Makefile  myftp.c  myftp.h  myftpserver.c  profclient  profserve
cs-360/hw-1/: Makefile  Word-Pairs-Hash.sublime-workspace  frequency  hashTable.c  hashTable.h  hashTableTest.c  ux  wordPairs.c  wordPairs.h
cs-360/hw-2/: Makefile  README.md  lineNum.c  lineNum.h  main.c
cs-360/hw-3/: Makefile  README.md  assignment3.c  assignment3.h  main.c
cs-360/hw-4/: assignment4.c
cs-360/hw-5/: assignment5-handout (1).tar  assignment5.c
cs-360/hw-6/: as6  assignment6-handout.tar  assignment6.c  philosophers.c  semTest.c
cs-360/hw-7/: Makefile  assignment7.c  main.c  test.c
cs-360/hw-8/: 8.c  assignment8-handout.tar  assignment8.c  test.c
cs-360/lab-2/: Makefile  lab2  lineNum  main.c
cs-360/lab-4/: lab4-1.c  lab4.c
cs-427/: .gitignore
cs-427/hw1/: Makefile  cypher2Decrypted  decypher  decypher.c
cs-427/hw2/: hw2.fdb_latexmk  hw2.fls  hw2.tex  hw2.xdv
cs-427/hw3/: eea.py  hw3.fdb_latexmk  hw3.fls  hw3.tex
cs-440/: .gitignore  README.md
cs-442/: README.md
cs-450/hw-1/: Cargo.toml  perf.data  perf.data.old
cs-450/hw-1/benches/: my_benchmark.rs
cs-450/hw-1/src/: lib.rs  main.rs
cs-450/hw-2/: Cargo.toml  perf.data
cs-450/hw-2/benches/: my_benchmarks.rs
cs-450/hw-2/src/: lib.rs  main.rs
cs-454/: README.md
cs-455/: .gitmodules
cs-466/: .gitignore  .gitmodules  CS466 Chapter 4.pptx  README.md
cs-483/: README.md  notes.html  notes.md
math-301/: 1-29.md
(+392 files in other folders)
