cargo-features = ["profile-rustflags"]

[package]
name = "hw-2"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug-assertions = false

[profile.release]
rustflags = ["-Ctarget-cpu=native"]
#debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "my_benchmarks"
harness = false